# icu4x

./: Cargo.toml
squatting/calendar/: Cargo.toml
squatting/collator/: Cargo.toml
squatting/display/: Cargo.toml
squatting/displaynames/: Cargo.toml
squatting/duration/: Cargo.toml
squatting/idna/: Cargo.toml
squatting/list/: Cargo.toml
squatting/measure/: Cargo.toml  README.md
squatting/message/: Cargo.toml
squatting/names/: Cargo.toml
squatting/normalizer/: Cargo.toml
squatting/rbnf/: Cargo.toml
squatting/segmenter/: Cargo.toml
squatting/timezone/: Cargo.toml
squatting/translit/: Cargo.toml
squatting/unit/: Cargo.toml
