# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[workspace]

members = [
    "experimental/bies",
    "experimental/provider_ppucd",
    "experimental/segmenter_lstm",
    "components/datetime",
    "components/decimal",
    "components/ecma402",
    "components/capi",
    "components/icu",
    "components/icu4x",
    "components/locale_canonicalizer",
    "components/locid",
    "components/locid/macros",
    "components/plurals",
    "components/provider_cldr",
    "components/provider_fs",
    "components/provider",
    "components/uniset",
    "resources/testdata",
    "tools/benchmark/macros",
    "tools/benchmark/memory",
    "utils/fixed_decimal",
    "utils/litemap",
    "utils/pattern",
    "utils/writeable",
    "utils/zerovec",
    "squatting/calendar",
    "squatting/collator",
    "squatting/display",
    "squatting/displaynames",
    "squatting/duration",
    "squatting/idna",
    "squatting/list",
    "squatting/measure",
    "squatting/message",
    "squatting/names",
    "squatting/normalizer",
    "squatting/rbnf",
    "squatting/segmenter",
    "squatting/timezone",
    "squatting/translit",
    "squatting/unit",
]

# Enable lto for WASM.
# 2020-10-30: This currently doesn't work in .cargo/config:
#   error: options `-C embed-bitcode=no` and `-C lto` are incompatible
[profile.release]
lto = true

# Enable debug information specifically for memory profiling.
# https://docs.rs/dhat/0.2.1/dhat/#configuration
#
# 2021-01-08: This would be nicer as a named profile, e.g. [profile.memory]
# https://github.com/rust-lang/cargo/issues/6988
[profile.bench]
debug = true
debug-assertions = false
